--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
                             <img src="j.jpg" alt="user1" class="user-image">
                             <h3 class="name">John Doe</h3>
                             <i class="feedback">Great coffee, very cozy atmosphere!</i>
-                        </li>
+                            <div class="section-content">
+                            </li>
                         <!-- Add more testimonials here -->
                         <li class="testimonial swiper-slide">
                             <img src="j.jpg" alt="user1" class="user-image">
@@ -181,28 +182,12 @@
                 <img src="i.png" alt="picture6" 
                 class="gallery-image">
             </li>
-            <li class="gallery-items">
-                <img src="i.png" alt="picture6" 
-                class="gallery-image">
-            </li>
-
-            <li class="gallery-items">
-                <img src="i.png" alt="picture6" 
-                class="gallery-image">
-            </li>
-            <li class="gallery-items">
-                <img src="i.png" alt="picture6" 
-                class="gallery-image">
-            </li>
-            <li class="gallery-items">
-                <img src="i.png" alt="picture6" 
-                class="gallery-image">
-            </li>
+            
          </ul>
      </div>
     </section>
     
-    <section class="contact" id="contact">
+    <section class="contact1" id="contact">
         <h2 class="section-title">Contac Us</h2>
      <div class="contact-list">
        <ul class="contact-items">
