--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>☕Coffee</title>
         <link rel="stylesheet" href="style.css"> <!-- Ensure this file exists -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script defer src="script.js"></script> <!-- Add your script or remove if not needed -->
     </head>
     <body>
@@ -37,7 +38,7 @@
         <script>
             function ww() {
               // Show an alert when the button is clicked
-              alert("A picture of happiness captures pure joy—smiles that light up faces, eyes sparkling with excitement, and moments frozen in time. It’s a reflection of peace, love, and the beauty of now.");
+              alert("Coffee is a popular beverage made from roasted coffee beans, offering a stimulating effect due to caffeine, enhancing alertness.");
               
               // Redirect to the #home section after the alert is dismissed
               window.location.href = "#menu";
@@ -143,7 +144,7 @@
                         <li class="testimonial swiper-slide">
                             <img src="e9.jpg" alt="user1" class="user-image">
                             <h3 class="name">Eliminate Distractions</h3>
-                            <i class="feedback"> Find a quiet, focused environment to maximize concentration and productivity.</i>
+                            <i class="feedback"></i>
                         </li>
                     </ul>
                     <div class="swiper-pagination"></div>
